--- a/support/links.html
+++ b/support/links.html
@@ -7,4 +7,4 @@ layout: root
 .pin-description { color:#555; }
 .pin-tag { display:none; }
 </style>
-<script language="javascript" src="http://pinboard.in//widgets/v1/linkroll/?user=fileformat&count=400&tag=logos"></script>
+<script language="javascript" src="http://pinboard.in//widgets/v1/linkroll/?user=fileformat&count=400&tag=hackerlogos"></script>
