progress on reworking support subdirectory

--- a/www/index.html
+++ b/www/index.html
@@ -22,4 +22,15 @@ If you are the owner and do not want your logo here, please let me know (nicely)
 
 I am definitely *not* an artist, and generally do not do anything besides resize and rearrange existing artwork.
 
+<style type="text/css">
+.pin-title { font-size:1em;text-decoration:none;color:#00a}
+.pin-description { color:#555; }
+.pin-tag { display:none; }
+</style>
+		<div class="panel panel-default">
+			<div class="panel-heading">Recently Bookmarked</div>
+			<div class="panel-body">
+<script language="javascript" src="http://pinboard.in//widgets/v1/linkroll/?user=fileformat&count=400&tag=hackerlogos"></script>
+</div>
+</div>
 
