--- a/www/support/contribute.html
+++ b/www/support/contribute.html
@@ -1,7 +1,10 @@
 ---
-title: Image Specifications
-layout: root
+title: Contributions
+layout: default
 ---
+
+
+<h2>Image Specifications</h2>
 
 <p>One of the key reasons for HackerLogos is a visually consistant look.  These are the guidelines for making images.</p>
 
