finished converting home page to html

--- a/www/index.html
+++ b/www/index.html
@@ -3,24 +3,30 @@ layout: default
 title: Logos for Hackers
 ---
 
-I needed consistantly sized logos for one of [my recent projects](http://www.regexplanet.com/).  While Google Image Search is really quite good, I still had a lot of trouble finding images that were:
+<p>I needed consistantly sized logos for one of <a href="http://www.regexplanet.com/">my recent projects</a>.  While Google Image Search is really quite good, I still had a lot of trouble finding images that were:</p>
 
- * consistently sized (or vector)
- * transparent background
- * look good on a variety of light backgrounds
- * with type in the correct layout
+<ul>
+	<li>consistently sized (or vector)</li>
+	<li>transparent background</li>
+	<li>look good on a variety of light backgrounds</li>
+	<li>with type in the correct layout</li>
+</ul>
 
-I ended having to do a fair bit of work to get them looking okay, and figured others might benefit as well.
+<p>I ended having to do a fair bit of work to get them looking okay, and figured others might benefit as well.</p>
 
-## Legal Disclaimer
+<h2>Legal Disclaimer</h2>
 
-I am not the copyright/trademark/etc owner of any of these.  Use them at your own risk.
+<p>I am not the copyright/trademark/etc owner of any of these.  Use them at your own risk.</p>
 
-If you are the owner and do not want your logo here, please let me know (nicely) and I will be glad to remove it.  No lawyers necessary: just [submit an issue](https://github.com/fileformat/hackerlogos/issues/new) on github! Just so you know: I am usually using them on a credits page ([example](http://www.numberplanet.com/support/credits.html)), so it might be in your best interests to let me slide.  Alternatively, it would be great if you provided the appropriately sized images yourself.
+<p>If you are the owner and do not want your logo here, please let me know (nicely) and I will be glad to remove it.  
+No lawyers necessary: just <a href="https://github.com/fileformat/hackerlogos/issues/new">submit an issue</a> on github! 
+Just so you know: I am usually using them on a credits page (<a href="http://www.numberplanet.com/support/credits.html">example</a>), so it might be in your best interests to let me slide.  
+Alternatively, it would be great if you provided the appropriately sized images yourself.
+</p>
 
-## Artistic Disclaimer
+<h2>Artistic Disclaimer</h2>
 
-I am definitely *not* an artist, and generally do not do anything besides resize and rearrange existing artwork.
+<p>I am definitely <i>not</i> an artist, and generally do not do anything besides resize and rearrange existing artwork.</p>
 
 <style type="text/css">
 .pin-title { font-size:1em;text-decoration:none;color:#00a}
