html fixes: almost ready to deploy

--- a/www/index.html
+++ b/www/index.html
@@ -14,29 +14,23 @@ title: Logos for Hackers
 
 <p>I ended having to do a fair bit of work to get them looking okay, and figured others might benefit as well.</p>
 
-<h2>Legal Disclaimer</h2>
-
-<p>I am not the copyright/trademark/etc owner of any of these.  Use them at your own risk.</p>
-
-<p>If you are the owner and do not want your logo here, please let me know (nicely) and I will be glad to remove it.  
-No lawyers necessary: just <a href="https://github.com/fileformat/hackerlogos/issues/new">submit an issue</a> on github! 
-Just so you know: I am usually using them on a credits page (<a href="http://www.numberplanet.com/support/credits.html">example</a>), so it might be in your best interests to let me slide.  
-Alternatively, it would be great if you provided the appropriately sized images yourself.
-</p>
-
-<h2>Artistic Disclaimer</h2>
-
-<p>I am definitely <i>not</i> an artist, and generally do not do anything besides resize and rearrange existing artwork.</p>
+<div class="row">
+    <div class="col-md-offset-4 col-md-4">
+	<p><a class="btn btn-success btn-lg btn-block" href="/logos/index.html">Browse Logos</a></p>
+    </div>
+</div>
 
 <style type="text/css">
 .pin-title { font-size:1em;text-decoration:none;color:#00a}
 .pin-description { color:#555; }
 .pin-tag { display:none; }
 </style>
-		<div class="panel panel-default">
-			<div class="panel-heading">Recently Bookmarked</div>
-			<div class="panel-body">
-<script language="javascript" src="http://pinboard.in//widgets/v1/linkroll/?user=fileformat&count=400&tag=hackerlogos"></script>
+<div class="row">
+<div class="panel panel-default">
+	<div class="panel-heading"><i class="fa fa-thumb-tack"></i> Recently Bookmarked</div>
+	<div class="panel-body">
+<script language="javascript" src="http://pinboard.in//widgets/v1/linkroll/?user=fileformat&count=5&tag=hackerlogos"></script>
+<a class="btn btn-default btn-xs" href="/support/links.html">More...</a>
+	</div>
 </div>
 </div>
-
