--- a/www/support/index.html
+++ b/www/support/index.html
@@ -4,6 +4,27 @@ layout: default
 redirect_from:
   - /support/tools.html
 ---
+
+<div class="row">
+    <div class="col-md-12">
+        <h3>Can I use these images without royalties/attribution/etc?  Do you even have the authority to grant me such rights?</h3>
+	<p>I am not the copyright/trademark/etc owner of any of these.  Use them at your own risk.</p>
+	<p>If you are the owner and do not want your logo here, please let me know (nicely) and I will be glad to remove it.  
+	No lawyers necessary: just <a href="https://github.com/fileformat/hackerlogos/issues/new">submit an issue</a> on github! 
+	Just so you know: I am usually using them on a credits page (<a href="http://www.numberplanet.com/support/credits.html">example</a>), so it might be in your best interests to let me slide.  
+	Alternatively, it would be great if you provided the appropriately sized images yourself.</p>
+    </div>
+</div>
+
+<div class="row">
+    <div class="col-md-12">
+        <h3>These images suck!  Can't you do any better?</h3>
+        <p>I am definitely <i>not</i> an artist, and generally do not do anything besides resize and rearrange existing artwork.</p>
+	<p>It can often be difficult to get the images to looks nice on their own and look good and consistant with the rest of the images.</p>
+	<p>(and see the next question!)</p>
+    </div>
+</div>
+
 <div class="row">
     <div class="col-md-12">
         <h3>How can I help?</h3>
