--- a/www/logos/index.html
+++ b/www/logos/index.html
@@ -6,9 +6,9 @@ redirect_from: /all.html
 {% assign sorted_pages = site.pages | sort:'title' %}
 <div class="logo-container">
 	<p>
-{% for other in sorted_pages %}{% assign otherpage = other.url|split:'/'|last %}{% assign otherslug = other.url|split:'/' %}{% if otherpage  == 'index.html' %}{% if otherslug[1] == 'logos' %}{% if other.url != '/logos/index.html' %}
+{% for other in sorted_pages %}{% assign otherpage = other.url|split:'/'|last %}{% assign otherslug = other.url|split:'/' %}{% if otherpage  == 'index.html' %}{% if otherslug[1] == 'logos' %}{% if other.url != '/logos/index.html' %}{% if other.title.size > 0 %}
 		<a href="{{other.url}}"><img alt="{{other.title}}" src="/logos/{{otherslug[2]}}/{{otherslug[2]}}-120x60.png" /></a>
-{% endif %}{% endif %}{% endif %}{% endfor %}
+{% endif %}{% endif %}{% endif %}{% endif %}{% endfor %}
 	</p>
 </div>
 
