link to inventory page

--- a/www/logos/index.html
+++ b/www/logos/index.html
@@ -12,3 +12,8 @@ redirect_from: /all.html
 	</p>
 </div>
 
+<div class="row">
+	<div class="col-md-12">
+		<div class="alert alert-info">You can also see the <a href="inventory.html">complete list of logos</a> that includes all variations.</p>
+	</div>
+</div>
