--- a/www/support/index.html
+++ b/www/support/index.html
@@ -35,15 +35,15 @@ redirect_from:
 <div class="row">
     <div class="col-md-12">
         <h3>How can I identify the font used in a logo?</h3>
-        <p><a href="http://www.myfonts.com/WhatTheFont/">WhatTheFont</a> - </p>
-	<p><a href="http://www.identifont.com/">IdentiFont</a> - </p>
+        <p><a href="http://www.myfonts.com/WhatTheFont/">WhatTheFont</a> - upload a sample image.  They also have an active <a href="http://www.myfonts.com/WhatTheFont/forum/">forum</a> where fonts experts will help.</p>
+	<p><a href="http://www.identifont.com/">IdentiFont</a> - answer a series of questions about specific characters.  Be sure to use the character filter.</p>
     </div>
 </div>
 
 <div class="row">
     <div class="col-md-12">
         <h3>What did you use to make this site?</h3>
-        <p>Check out the <a href="credits.html">credits</a> page.</p>
+        <p>Check out the <a href="credits.html">credits</a> page (featuring images from {{ site.title }}, of course).</p>
     </div>
 </div>
 
