switched to use svg on main list page

--- a/www/index.html
+++ b/www/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Logos for Hackers
+title: Consistant Vector Logos
 ---
 
 <p>I needed consistantly sized logos for one of <a href="http://www.regexplanet.com/">my recent projects</a>.  While Google Image Search is really quite good, I still had a lot of trouble finding images that were:</p>
