--- a/www/logos/index.html
+++ b/www/logos/index.html
@@ -6,8 +6,8 @@ redirect_from: /all.html
 {% assign sorted_pages = site.pages | sort:'title' %}
 <div class="logo-container">
 	<p>
-{% for logopage in sorted_pages %}{% if logopage.logohandle %}{% capture logofile %}{{ logopage.logohandle }}{{ '-120x60.png' }}{% endcapture %}{% if logopage.images contains logofile %}
-		<a href="{{logopage.url}}"><img alt="{{logopage.title}}" src="/logos/{{logopage.logohandle}}/{{logopage.logohandle}}-120x60.png" /></a>
+{% for logopage in sorted_pages %}{% if logopage.logohandle %}{% capture logofile %}{{ logopage.logohandle }}{{ '-ar21.svg' }}{% endcapture %}{% if logopage.images contains logofile %}
+		<a href="{{logopage.url}}"><img alt="{{logopage.title}}" src="{{logopage.logohandle}}/{{logofile}}" /></a>
 {% endif %}{% endif %}{% endfor %}
 	</p>
 </div>
