--- a/www/index.html
+++ b/www/index.html
@@ -29,7 +29,7 @@ title: Consistant Vector Logos
 <div class="panel panel-default">
 	<div class="panel-heading"><i class="fa fa-thumb-tack"></i> Recently Bookmarked</div>
 	<div class="panel-body">
-<script language="javascript" src="http://pinboard.in//widgets/v1/linkroll/?user=fileformat&count=5&tag=hackerlogos"></script>
+<script language="javascript" src="https://pinboard.in//widgets/v1/linkroll/?user=fileformat&count=5&tag=hackerlogos"></script>
 <a class="btn btn-default btn-xs" href="/support/links.html">More...</a>
 	</div>
 </div>
