tooltips for preview

--- a/www/util/preview.html
+++ b/www/util/preview.html
@@ -33,26 +33,26 @@ noindex: true
 		<div class="container">
 <p class="navbar-text" href="/">Image Preview</p>
 <div class="btn-group" role="group" aria-label="Background">
-  <button class="btn btn-default navbar-btn background-btn" data-background="grid" type="button"><i class="fa fa-th-large"></i></button>
-  <button class="btn btn-default navbar-btn background-btn" data-background="dark" type="button"><i class="fa fa-stop"></i></button>
-  <button class="btn btn-default navbar-btn background-btn active" data-background="light" type="button"><i class="fa fa-square-o"></i></button>
+  <button class="btn btn-default navbar-btn background-btn" data-background="grid" title="Checkboard background" type="button"><i class="fa fa-th-large"></i></button>
+  <button class="btn btn-default navbar-btn background-btn" data-background="dark" title="Dark background" type="button"><i class="fa fa-stop"></i></button>
+  <button class="btn btn-default navbar-btn background-btn active" data-background="light" title="Light Background" type="button"><i class="fa fa-square-o"></i></button>
 </div>
 
 <div class="btn-group" role="group" aria-label="Zoom">
-  <button type="button" class="btn btn-default navbar-btn zoom-btn" id="zoom_out"><i class="fa fa-search-minus"></i></button>
-  <button type="button" class="btn btn-default navbar-btn zoom-btn" id="zoom_reset">1:1</button>
-  <button type="button" class="btn btn-default navbar-btn zoom-btn" id="zoom_in"><i class="fa fa-search-plus"></i></button>
-  <button type="button" class="btn btn-default navbar-btn zoom-btn" id="zoom_full"><i class="fa fa-arrows-alt"></i></button>
+  <button type="button" class="btn btn-default navbar-btn zoom-btn" id="zoom_out" title="Zoom out"><i class="fa fa-search-minus"></i></button>
+  <button type="button" class="btn btn-default navbar-btn zoom-btn" id="zoom_reset" title="No zoom">1:1</button>
+  <button type="button" class="btn btn-default navbar-btn zoom-btn" id="zoom_in" title="Zoom in"><i class="fa fa-search-plus"></i></button>
+  <button type="button" class="btn btn-default navbar-btn zoom-btn" id="zoom_full" title="Max zoom"><i class="fa fa-arrows-alt"></i></button>
 </div>
 
 <div class="btn-group" role="group" aria-label="Border">
-  <button type="button" class="btn btn-default navbar-btn border-btn" data-border="0">None</button>
-  <button type="button" class="btn btn-default navbar-btn border-btn active" data-border="1">Thin</button>
-  <button type="button" class="btn btn-default navbar-btn border-btn" data-border="4">Thick</button>
+  <button type="button" class="btn btn-default navbar-btn border-btn" data-border="0" title="No border">None</button>
+  <button type="button" class="btn btn-default navbar-btn border-btn active" data-border="1" title="Thin border">Thin</button>
+  <button type="button" class="btn btn-default navbar-btn border-btn" data-border="4" title="Thick border">Thick</button>
 </div>
 
-<a class="btn btn-default navbar-btn" id="btn-download"><i class="fa fa-download"></i></a>
-<a class="btn btn-default navbar-btn" id="btn-exit"><i class="fa fa-sign-out"></i></a>
+<a class="btn btn-default navbar-btn" id="btn-download" title="Download"><i class="fa fa-download"></i></a>
+<a class="btn btn-default navbar-btn" id="btn-exit" title="Exit Preview"><i class="fa fa-sign-out"></i></a>
 			
 			<p class="navbar-text navbar-right"><a href="/index.html" class="navbar-link">Vector Logo Zone</a></p>
 		</div>
