credit pages links to logos as well as external site

--- a/www/support/credits.html
+++ b/www/support/credits.html
@@ -18,7 +18,7 @@ title: Credits
 		<tbody>	
 {% for credit in site.data.credits %}
 			<tr>
-				<td><a href="{{ credit.url }}"><img src="/logos/{{ credit.id }}/{{credit.id}}-ar21.svg" alt=""></a></td>
+				<td><a href="/logos/{{credit.id}}/index.html"><img src="/logos/{{ credit.id }}/{{credit.id}}-ar21.svg" alt=""></a></td>
 				<td><a href="{{ credit.url }}">{{ credit.name }}</a> - {{ credit.description }}</td>
 			</tr>
 {% endfor %}
