--- a/www/index.html
+++ b/www/index.html
@@ -20,7 +20,7 @@ title: Consistant Vector Logos
     </div>
 </div>
 
-<style type="text/css">
+<style scoped="scoped" type="text/css">
 .pin-title { font-size:1em;text-decoration:none;color:#00a}
 .pin-description { color:#555; }
 .pin-tag { display:none; }
@@ -29,7 +29,7 @@ title: Consistant Vector Logos
 <div class="panel panel-default">
 	<div class="panel-heading"><i class="fa fa-thumb-tack"></i> Recently Bookmarked</div>
 	<div class="panel-body">
-<script language="javascript" src="https://pinboard.in//widgets/v1/linkroll/?user=fileformat&count=5&tag=hackerlogos"></script>
+<script src="https://pinboard.in//widgets/v1/linkroll/?user=fileformat&amp;count=5&amp;tag=hackerlogos"></script>
 <a class="btn btn-default btn-xs" href="/support/links.html">More...</a>
 	</div>
 </div>
