--- a/www/logos/index.html
+++ b/www/logos/index.html
@@ -14,6 +14,6 @@ redirect_from: /all.html
 
 <div class="row">
 	<div class="col-md-12">
-		<div class="alert alert-info">You can also see the <a href="inventory.html">complete list of logos</a> that includes all variations.</p>
+		<div class="alert alert-info">You can also see the <a href="inventory.html">complete list of logos</a> that includes all variations.</div>
 	</div>
 </div>
