tweaked home page text

--- a/www/index.html
+++ b/www/index.html
@@ -6,13 +6,15 @@ title: Consistant Vector Logos
 <p>I needed consistantly sized logos for one of <a href="http://www.regexplanet.com/">my recent projects</a>.  While Google Image Search is really quite good, I still had a lot of trouble finding images that were:</p>
 
 <ul>
-	<li>consistently sized (or vector)</li>
+	<li>svg format</li>
+	<li>consistently sized</li>
+	<li>consistent padding</li>
 	<li>transparent background</li>
 	<li>look good on a variety of light backgrounds</li>
 	<li>with type in the correct layout</li>
 </ul>
 
-<p>I ended having to do a fair bit of work to get them looking okay, and figured others might benefit as well.</p>
+<p>I ended having to do a fair bit of work to get what I needed, and figured others might benefit as well.</p>
 
 <div class="row">
     <div class="col-md-offset-4 col-md-4">
