--- a/www/support/index.html
+++ b/www/support/index.html
@@ -27,6 +27,29 @@ redirect_from:
 
 <div class="row">
     <div class="col-md-12">
+        <h3>Why only vector images? </h3>
+        <p>Vector images look so much better, especially on high-resolution displays, and don't require any of the 
+	   hacks needed for responsive images: they &ldquo;just work&rdquo;!</p>
+    </div>
+</div>
+
+<div class="row">
+    <div class="col-md-12">
+        <h3>Will my users be able to see them?</h3>
+        <p>According to <a href="http://caniuse.com/#feat=svg-img">Can I Use</a>, 96% will be able to see them.</p>
+    </div>
+</div>
+
+<div class="row">
+    <div class="col-md-12">
+        <h3>But I really want to support IE8!</h3>
+        <p></p>
+	<p></p>
+    </div>
+</div>
+
+<div class="row">
+    <div class="col-md-12">
         <h3>How can I help?</h3>
         <p><a href="contribute.html">Contribute</a>!</p>
     </div>
@@ -54,7 +77,7 @@ redirect_from:
 	expect an immediate response.</p>
     </div>
 </div>
-
+http://caniuse.com/#search=img%20svg
 
 <!--
 <div class="row">
