--- a/www/index.html
+++ b/www/index.html
@@ -31,7 +31,7 @@ title: Consistant Vector Logos
 <div class="panel panel-default">
 	<div class="panel-heading"><i class="fa fa-thumb-tack"></i> Recently Bookmarked</div>
 	<div class="panel-body">
-<script src="https://pinboard.in//widgets/v1/linkroll/?user=fileformat&amp;count=5&amp;tag=hackerlogos"></script>
+<script src="https://pinboard.in//widgets/v1/linkroll/?user=fileformat&amp;count=5&amp;tag=vectorlogozone"></script>
 <a class="btn btn-default btn-xs" href="/support/links.html">More...</a>
 	</div>
 </div>
