--- a/www/support/index.html
+++ b/www/support/index.html
@@ -18,6 +18,14 @@ redirect_from:
 
 <div class="row">
     <div class="col-md-12">
+        <h3>Can I hotlink the images, or do I have to make my own copy?</h3>
+        <p>I originally wasn't going to allow hotlinking, but CloudFlare promises unlimited free bandwidth, so I changed my
+	   mind.  Unless CloudFlare changes their mind, hotlink away!</p>
+    </div>
+</div>
+
+<div class="row">
+    <div class="col-md-12">
         <h3>These images suck!  Can't you do any better?</h3>
         <p>I am definitely <i>not</i> an artist, and generally do not do anything besides resize and rearrange existing artwork.</p>
 	<p>It can often be difficult to get the images to looks nice on their own and look good and consistant with the rest of the images.</p>
