--- a/www/logos/visual.html
+++ b/www/logos/visual.html
@@ -26,7 +26,7 @@ layout: default
 
 		{% for logopage in sorted_pages %}{% if logopage.logohandle %}
 			{% capture logofile %}{{ logopage.logohandle }}-{{ imagetype.id }}.svg{% endcapture %}{% if logopage.images contains logofile %}
-				<a href="{{ logopage.url }}"><img alt="{{logopage.title}} {{imagetype.title}}" src="{{ logopage.logohandle }}/{{ logofile }}" /></a>
+				<a href="{{ logopage.url }}"><img alt="{{logopage.title}} {{imagetype.title}}" src="{{ logopage.logohandle }}/{{ logofile }}" {% if imagetype.padding %}style="padding:{{imagetype.padding}}"{% endif %}/></a>
 				{% assign logocount = logocount | plus:1 %}
 			{% endif %}
 		{% endif %}{% endfor %}
