--- a/www/support/index.html
+++ b/www/support/index.html
@@ -53,7 +53,7 @@ redirect_from:
         <h3>But I really want to support IE8!</h3>
         <p>I have seen several different ways: <a href="https://css-tricks.com/a-complete-guide-to-svg-fallbacks/">picture, image</a> and <a href="http://www.sitepoint.com/graceful-fallback-svgs-old-ie/">onerror</a>.</p>
 	<p>I implemented the <code>onerror</code> method on the <a href="/logos/index.html">logo list page</a>, but I am too lazy to get IE8 to test, so
-	   I have no idea if it works.  If it does, please <a href="contact.html">let me know</a>!</p>
+	   I have no idea if it works.  If it does, please <a href="contact.html">let me know</a>!
 	</p>
     </div>
 </div>
