--- a/www/support/links.html
+++ b/www/support/links.html
@@ -11,7 +11,7 @@ layout: default
 </style>
 <div class="row">
 	<div class="panel-body">
-<script language="javascript" src="http://pinboard.in//widgets/v1/linkroll/?user=fileformat&count=400&tag=hackerlogos"></script>
+<script language="javascript" src="https://pinboard.in//widgets/v1/linkroll/?user=fileformat&amp;count=400&amp;tag=vectorlogozone"></script>
 
 	</div>
 </div>
